test fixed info bubble not centered

--- a/style/frontpage.css
+++ b/style/frontpage.css
@@ -799,6 +799,7 @@ article {
   border-radius: 10px;
 }
 .info_bubble {
+
   top: 200vh;
   max-width: 450px;
   position: fixed;
@@ -810,6 +811,8 @@ article {
   transition: 1s;
   z-index: 9999999;
   transform: translate(-140vw, calc(100vh / 2 - 50% + 100px));
+  transform: translate(-140vw, calc(var(--vh, 1vh)*100 / 2 - 50% + 100px));
+
   background-color: #30405f;
   display: flex;
   justify-content: center;
